persona y Hys Components

--- a/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,6 +1,7 @@
 <div class="row">
+        <button type="button" class="btn btn-light" routerLink="/editacercade/1" *ngIf="isLogged">Editar Persona</button>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/Perfil.jpg" alt="Foto" class="img-fluid" id="fotoPerfil">
+        <img src={{persona.img}} alt="Foto" class="img-fluid" id="fotoPerfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
@@ -9,9 +10,7 @@
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
             <h1 class="color-letra">Acerca de Mi</h1>
-            <p id="info">Estudiante de ingeniería informática de forma autónoma con un gran interés en la programación web. 
-                Tengo gran capacidad para adaptarme a todo tipo de entornos y aportar siempre lo mejor de mi. Me caracterizo por mi facilidad para el trabajo en equipo y entusiasmo por aprender y desarrollar mis habilidades. 
-                En busca de una oportunidad laboral en la que adquirir más experiencia.</p>
+            <p id="info">{{persona.descripcion}}</p>
         </span>
     </div>
 </div>
