--- a/FrontEnd/src/app/components/hys/hys.component.css
+++ b/FrontEnd/src/app/components/hys/hys.component.css
@@ -8,3 +8,21 @@ h1{
     padding-bottom: 50px;
     font-size: 70px;
 }
+
+.btn{
+    width: 160px;
+}
+
+.btn-table:hover{
+    color: white;
+}
+
+.container-btn{
+    text-align: center;
+}
+
+.circulo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
