--- a/FrontEnd/src/app/components/hys/hys.component.html
+++ b/FrontEnd/src/app/components/hys/hys.component.html
@@ -1,11 +1,17 @@
 <div class="row">
     <h1 class="color-letra">Hard and Soft Skills</h1>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4" >
+    <div class="container-btn">
+        <button type="button" routerLink="/newskill" class="btn btn-light" *ngIf="isLogged">Nueva Skil</button>
+    </div>
+    <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
         <circle-progress
-            [percent]="90"
+            [percent]="(skill.porcentaje)"
             [radius]="100"
-            [imageSrc]="'../assets/html.png'"
-            [showImage]="true"
+            [imageSrc]="''"
+            [title]="(skill.nombre)"
+            [titleColor]="'#FFFFFF'"
+            [showTitle]="true"
+            [showImage]="false"
             [imageHeight]="100"
             [imageWidth]="100"
             [showUnits]="false"
@@ -17,8 +23,20 @@
             [animation]="true"
             [animationDuration]="900"
         ></circle-progress>
+
+        <div>
+            <td *ngIf="isLogged"><button type="button" class="letra-dos btn btn-table" routerLink="/editskill/{{skill.id}}"><i class="bi bi-pencil-square"></i>Editar</button></td>
+            <td *ngIf="isLogged"><button type="button" class="letra-dos btn btn-table" (click)="delete(skill.id)"><i class="bi bi-eraser-fill"></i>Borrar</button></td>
+        </div>
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4" >
+</div>
+
+
+
+
+
+
+<!-- <div class="text-center col-sm-4 col-md-4 col-lg-4" >
         <circle-progress
         [percent]="70"
         [radius]="100"
@@ -161,5 +179,4 @@
         [animation]="true"
         [animationDuration]="900"
     ></circle-progress>
-    </div>
-</div>
+    </div> -->
