--- a/FrontEnd/src/app/components/educacion/edit-educacion.component.html
+++ b/FrontEnd/src/app/components/educacion/edit-educacion.component.html
@@ -9,7 +9,9 @@
                 <label for="descripcionE" class="letra-dos">Descripcion de sus estudios</label>
                 <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="educacion.descripcionE" required>
             </div>
-            <button class="btn">Actualizar Educacion</button>
+            <div class="btn-container">
+                <button class="btn">Actualizar Educacion</button>
+            </div>
         </form>
     </div>
 </div>
