--- a/FrontEnd/src/app/components/educacion/educacion.component.html
+++ b/FrontEnd/src/app/components/educacion/educacion.component.html
@@ -4,7 +4,7 @@
         <button type="button" class="btn btn-light" routerLink="/nuevaedu" *ngIf="isLogged">Agregar Educacion</button>
     </div>
     
-    <div class="col-lg-11">
+    <div class="col-lg-11 table-responsive">
         <table class="table">
             <tbody>
                 <tr *ngFor="let Educacion of educacion">
