--- a/FrontEnd/src/app/components/experiencia/edit-experiencia.component.html
+++ b/FrontEnd/src/app/components/experiencia/edit-experiencia.component.html
@@ -9,7 +9,10 @@
                 <label for="descripcionE" class="letra-dos">Descripcion del trabajo</label>
                 <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
             </div>
-            <button class="btn">Actualizar Experiencia</button>
+            <div class="btn-container">
+                <button class="btn">Actualizar Experiencia</button>
+            </div>
+            
         </form>
     </div>
 </div>
