--- a/FrontEnd/src/app/components/experiencia/experiencia.component.html
+++ b/FrontEnd/src/app/components/experiencia/experiencia.component.html
@@ -4,7 +4,7 @@
         <button type="button" class="btn btn-light" routerLink="/nuevaexp" *ngIf="isLogged">Nueva Experiencia</button>
     </div>
     
-    <div class="col-lg-11">
+    <div class="col-lg-11 table-responsive">
         <table class="table">
             <tbody>
                 <tr *ngFor="let Experiencia of expe">
