--- a/FrontEnd/src/app/components/experiencia/new-experiencia.component.html
+++ b/FrontEnd/src/app/components/experiencia/new-experiencia.component.html
@@ -9,7 +9,9 @@
                         <label for="descripcionE" class="letra-dos">Descripcion del trabajo</label>
                         <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                     </div>
-                <button class="btn">Agregar Experiencia</button>
+                    <div class="btn-container">
+                        <button class="btn">Agregar Experiencia</button>    
+                    </div>
             </form>
     </div>
 </div>
