--- a/FrontEnd/src/app/components/acerca-de/acerca-de.component.css
+++ b/FrontEnd/src/app/components/acerca-de/acerca-de.component.css
@@ -8,6 +8,10 @@ div{
     margin: 0 auto;
 }
 
+.btn{
+    width: 500px;
+}
+
 /* Etiqueta nombre */
 
 #nombre{
@@ -18,7 +22,6 @@ div{
 
 h1{
     font-size: 100px;
-    border-bottom: 2px solid black;
 }
 
 #info{
@@ -36,13 +39,22 @@ h1{
 
 @media (min-width: 576px){
     #fotoPerfil{
-        position: absolute;
-        width: 15%;
-        border-radius: 20%;
+        border-radius: 50%;
         box-shadow: 0px 0px 14px 9px rgba(0,0,0,0.73);
-        left: 2%;
-        top: 1050px;
     }
+    .containerAcerca{
+        margin-top: 100px;
+    }
+    .acercaDe{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .btn-container{
+        margin-top: 80px;
+    }
+
 }
 
 @media (max-width: 575px){
@@ -53,6 +65,9 @@ h1{
         box-shadow: 0px 0px 14px 9px rgba(0,0,0,0.73);
         left: 40%;
         top: 550px;
+    }
+    .btn-container{
+        margin-top: 80px;
     }
 }
 
@@ -65,6 +80,13 @@ h1{
         left: 40%;
         top: 470px;
     }
+    .btn-container{
+        margin-top: 80px;
+    }
+    .btn{
+        width: 200px;
+    }
+
 }
 
 @media (max-width: 349px){
@@ -75,6 +97,9 @@ h1{
         box-shadow: 0px 0px 14px 9px rgba(0,0,0,0.73);
         left: 35%;
         top: 400px;
+    }
+    .btn-container{
+        margin-top: 80px;
     }
 }
 
