--- a/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,5 +1,4 @@
-<div class="row">
-        <button type="button" class="btn btn-light" routerLink="/editacercade/1" *ngIf="isLogged">Editar Persona</button>
+<div class="row containerAcerca" *ngIf="persona">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <img src={{persona.img}} alt="Foto" class="img-fluid" id="fotoPerfil">
     </div>
@@ -9,9 +8,13 @@
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
         <span>
-            <h1 class="color-letra">Acerca de Mi</h1>
-            <p id="info">{{persona.descripcion}}</p>
+            <h1 class="color-letra acercaDe">Acerca de Mi</h1>
+            <p class="" id="info">{{persona.descripcion}}</p>
         </span>
     </div>
+</div>
+
+<div class="btn-container">
+    <button type="button" class="btn btn-light" routerLink="/editacercade/1" *ngIf="isLogged">Editar Persona</button>
 </div>
 
