--- a/FrontEnd/src/app/components/acerca-de/edit-acerca-de.component.html
+++ b/FrontEnd/src/app/components/acerca-de/edit-acerca-de.component.html
@@ -11,15 +11,20 @@
             </div>
             <div class="form-group">
                 <label for="descripcion" class="letra-dos">Descripcion</label>
-                <input type="text" class="form-control" id="Descripcion" name="Descripcion" [(ngModel)]="persona.descripcion" required>
+                <textarea type="text" class="form-control" id="Descripcion" name="Descripcion" [(ngModel)]="persona.descripcion" required rows="5"></textarea>
             </div>
             <div class="form-group">
                 <label for="img" class="letra-dos">Subir Imagen</label>
-                <input type="file" class="form-control" id="img" name="img" [(ngModel)]="persona.img" (change)="uploadImage($event)" accept=".jpg, .jpeg, png">
+                <input type="file" class="form-control" id="img" name="img" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
             </div>
-
+            <div class="imagen">
+                <img [src]="imageService.url" width="200px">
+            </div>
             <br>
-            <button class="btn">Actualizar Persona</button>
+            <div class="btn-container">
+                <button class="btn">Actualizar Persona</button>
+            </div>
+            
         </form>
     </div>
 </div>
