--- a/FrontEnd/src/app/components/hys/edit-skill.component.css
+++ b/FrontEnd/src/app/components/hys/edit-skill.component.css
@@ -21,11 +21,13 @@ label{
     margin: 20px 0;
 }
 
+.btn-container{
+    text-align: center;
+}
+
 button{
     background-color: black;
     color: white;
-    margin-left: 325px;
-    margin-top: 30px;
 }
 
 button:hover{
