--- a/FrontEnd/src/app/components/hys/edit-skill.component.html
+++ b/FrontEnd/src/app/components/hys/edit-skill.component.html
@@ -9,7 +9,9 @@
                 <label for="descripcionE" class="letra-dos">Ingrese el Porcentaje</label>
                 <input type="text" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="skill.porcentaje" required>
             </div>
-            <button class="btn">Actualizar skill</button>
+            <div class="btn-container">
+                <button class="btn">Actualizar skill</button>
+            </div>
         </form>
     </div>
 </div>
