--- a/FrontEnd/src/app/components/hys/hys.component.css
+++ b/FrontEnd/src/app/components/hys/hys.component.css
@@ -7,10 +7,12 @@ h1{
     text-align: center;
     padding-bottom: 50px;
     font-size: 70px;
+    margin-top: 60px;
 }
 
 .btn{
     width: 160px;
+    margin: 50px 0;
 }
 
 .btn-table:hover{
