--- a/FrontEnd/src/app/components/hys/new-skill.component.html
+++ b/FrontEnd/src/app/components/hys/new-skill.component.html
@@ -9,7 +9,9 @@
                     <label for="descripcionE" class="letra-dos">Porcentaje</label>
                     <input type="text" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="porcentaje" required>
                 </div>
-            <button class="btn">Agregar Skill</button>
+                <div class="btn-container">
+                    <button class="btn">Agregar Skill</button>
+                </div>  
         </form>
 </div>
 </div>
