--- a/FrontEnd/src/app/components/proyectos/proyectos.component.html
+++ b/FrontEnd/src/app/components/proyectos/proyectos.component.html
@@ -1,33 +1,24 @@
-<div class="row">
+<div class="row" >
     <h1 class="color-letra">Proyectos Realizados</h1>
-    <div class="contenedor">
+    <div>
+        <button type="button" class="btn btn-light" routerLink="/newproyecto" *ngIf="isLogged">Agregar Proyecto</button>
+    </div>
+    <div class="contenedor" *ngFor="let proyecto of proyecto">
         <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-            <h3 class="letra-dos">Presupuesto</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quibusdam sapiente molestias suscipit, adipisci impedit unde accusantium quis pariatur nemo maxime sunt nesciunt perspiciatis itaque libero consequuntur sed eum dolorem.</p>
+            <h3 class="letra-dos">{{proyecto.nombreP}}</h3>
+            <p>{{proyecto.descripcionP}}</p>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-            <a href="https://presupuesto-agustin-ponte.netlify.app/" target="_blank">
-                <img src="../../../assets/presupuesto.png" class="img-fluid img-proyect" alt="proyecto">
+            <a href={{proyecto.urlP}} target="_blank">
+                <img src={{proyecto.imgP}} class="img-fluid img-proyect" alt="proyecto">
             </a>
             
-        </div>
-        <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-            <h3 class="letra-dos">Tienda Prueba</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quibusdam sapiente molestias suscipit, adipisci impedit unde accusantium quis pariatur nemo maxime sunt nesciunt perspiciatis itaque libero consequuntur sed eum dolorem.</p>
-        </div>
-        <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-            <a href="https://codepen.io/Agustinoo/pen/VwxRVXW" target="_blank">
-                <img src="../../../assets/NIKE.png" class="img-fluid img-proyect" alt="proyecto">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-            <h3 class="letra-dos">Ficha Tecnica</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quibusdam sapiente molestias suscipit, adipisci impedit unde accusantium quis pariatur nemo maxime sunt nesciunt perspiciatis itaque libero consequuntur sed eum dolorem.</p>
-        </div>
-        <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-            <a href="https://codepen.io/Agustinoo/pen/poKRJxo" target="_blank">
-                <img src="../../../assets/Ford.JPG" class="img-fluid img-proyect" alt="proyecto">
-            </a>
-        </div>
     </div>
+    <div>
+        <button type="button" class="letra-dos btn btn-table" routerLink="/editproyecto/{{proyecto.id}}" *ngIf="isLogged"><i class="bi bi-pencil-square"></i>Editar</button>
+        <button type="button" class="letra-dos btn btn-table" (click)="delete(proyecto.id)" *ngIf="isLogged"><i class="bi bi-eraser-fill"></i>Borrar</button>
+    </div>
+    
 </div>
+
+
